namespace OrdrMate.Enums;

public enum UserRole
{
    TopManager,
    BranchManager,
    Admin,
    Customer,
    Rider
}